添加部分题目实现